app/assets/stylesheets/styles.css
/*TEMP*/
/*  div {
    border: 1px solid green;
  }

  td {
    border: 1px solid blue;
  }*/


  .test-blue{
    background-color: blue;
  }


a {
  color: white;
  text-decoration: none;
}

a:active { outline: none }




/*STRUCTURE OF THE PAGE*/

/* ---- HEADER ---- */

  header {
    color: white;
    background-color: rgba(33, 33, 33, 1);
    width: 100%;

  }

.header-menu-item {
  display: inline-block;
  vertical-align: middle;
}

  #main-logo {
    height: 75px;
    width: 75px;
    background-color: green;
  }

  #section-header {
    height: 75px;
    width: 250px;
    background-color: red;
    color: white;
  }

  #application-name {
    text-align: center;
    font-size: 18px;
  }

  .header-list li{
    display: inline;
  }

  #hamburger {
    font-size: 25px;
    float: right;
    right: 20px;
    top: 25px;
    position: relative;
  }

/*---- SIDEBAR MENU ----*/

#sidebar-right {
  background-color: rgba(33, 33, 33, 1);
  color: white;
}

#sidebar-main-links {
  position: absolute;
  top: 100px;
  left: 30px;
  text-align: left;

}

#devise-sidebar {
  position: absolute;
  bottom: 20px;
  text-align: center;
  width: 100%;
}




/*---- INDEX ---- */

/*  #job_list {
    margin: auto;
    height: 80%;
  }*/

  .btn {
    background-color: gray;
    border: black 1px solid;
    text-decoration: none;
    outline: none;
  }
  .tab{
    margin: auto;
    width: 100px;
    text-decoration: none;
    outline: none;
  }

  .new-tab{
    /*faces down*/
    text-align: center;
    height: 30px;
    width: 200px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    text-decoration: none;
    outline: none;
    border-style: none;
  }

  table{
    background-color: #fff;
    /*cellspacing: 0px;*/
    /*width:90px*/
  }

  thead, tfoot{
    background-color: orange;
  }

  tbody tr:hover {
    /*background-color: rgba(0, 118, 255, 0.4);*/
    /*color: green;*/
    /*font-weight: bold;*/
    border: 2px solid red;
  }

  tr{

  }
  tr.paused{
    background-color: #B1B464;
    /*background-color: red;*/
    /*color: gray;*/
    /*font-style: italic;*/
  }
  tr.closed{
    /*closed must come AFTER paused*/
    background-color: rgba(131, 148, 148, 0.4);
    color: gray;
    font-style: italic;
  }

  td{
    white-space: nowrap
  }
  tbody td:hover {
    /*background-color: rgba(0, 118, 255, 0.4);*/
  }

  /*#FIX THIS ISN'T WORKING - WE NEED TO MAKE THE ICON COLUMNS SKINNY
  .td-contains-icon{
    margin:0px;
    padding:0px;
    width:5px;
    background-color: blue;
  }
  .icon-in-cell{
    margin:0px;
    padding:0px;
  }*/
  



  .new-slider {
    border-bottom: solid black 1px;
  }
  .new-tab-plus{
    margin: auto;
  }

/*---- ENTRY PAGE ----*/


  /*attachement icons*/
    .attachment-icon-img{
      position:relative; 
    }

    .text-over-previous-image{
      z-index:100;
      position:relative;    
      /*color:green;*/
      font-size:16px;
      font-weight:bold;
      left:-12px;
      top:3px;
      border:solid red 1px;
    }

#text_blob {
  height: 100px;
  width: 80%;
}

.new-container {
  text-align: center;
}


/*JQUERY / BACKBONE STUFF*/
  .hidden{
    display: none;
  }

/*  .hasHighlight:hover {
    color: #2ecc71;
  }*/


  .temp-border{
    border:blue 2px solid;
  }

